# ai-grant-engine

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml  secrets.toml
knowledge_base/procedures/: application_sections.md  eligible_expenses.md  scoring_criteria.md  winning_strategy.md
src/: app.py  main.py
src/agents/: __init__.py  base_agent.py  cfo.py  red_team.py  strategist.py  technical_writer.py
src/config/: __init__.py  constants.py  settings.py
src/graph/: __init__.py  edges.py  nodes.py  pipeline.py  state.py
src/knowledge/: indexer.py  retriever.py
src/llm/: __init__.py  provider.py  router.py
src/llm/providers/: __init__.py  claude_provider.py  gemini_provider.py  groq_provider.py  mistral_provider.py  openai_provider.py  openrouter_provider.py  together_provider.py
src/output/: docx_generator.py  xlsx_generator.py
src/tools/: budget_calculator.py  document_parser.py  github_analyzer.py  hebrew_utils.py  rag_retriever.py
src/web/: streamlit_app.py
tests/: test_budget_calculator.py  test_pipeline.py
