[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-grant-engine"
version = "0.1.0"
description = "Multi-agent AI system for automating Israeli Innovation Authority grant applications"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.5.0",
    "streamlit>=1.38.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "PyPDF2>=3.0.0",
    "python-pptx>=0.6.23",
    "gitpython>=3.1.0",
    "tenacity>=8.2.0",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "google-generativeai>=0.7.0",
    "groq>=0.9.0",
    "together>=1.2.0",
    "mistralai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
]

[project.scripts]
grant-engine = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"
